--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -44,11 +44,11 @@ jobs:
           cache-source: rust-build-cache
           cache-target: /app/target
 
-      - uses: docker/build-push-action@v2
+      - uses: docker/build-push-action@v5
         with:
           # https://github.com/docker/build-push-action/issues/378
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          cache-from: type=registry,ref=ghcr.io/pluralkit/avatars:${{ env.BRANCH_NAME }}
-          cache-to: type=inline
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
