--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ axum = { version = "0.7.4"}
 config = { version = "0.14.0", default-features = false, features = ["toml"] }
 data-encoding = "2.5.0"
 futures = "0.3.30"
-image = { version = "0.24.8" }
-reqwest = { version = "0.11.24" , default-features = false, features = ["rustls-tls"]}
+image = { version = "0.24.8", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
+reqwest = { version = "0.11.24" , default-features = false, features = ["rustls-tls", "http3", "trust-dns"]}
 rust-s3 = { version = "0.33.0", default-features = false, features = ["tokio-rustls-tls"] }
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
