--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ anyhow = "1.0.79"
 axum = { version = "0.7.4"}
 config = { version = "0.14.0", default-features = false, features = ["toml"] }
 data-encoding = "2.5.0"
+form_urlencoded = "1.2.1"
 futures = "0.3.30"
 image = { version = "0.24.8", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
 reqwest = { version = "0.11.24" , default-features = false, features = ["rustls-tls", "trust-dns"]}
