--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,11 @@ rust-s3 = { version = "0.33.0", default-features = false, features = ["tokio-rus
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 sha2 = "0.10.8"
-sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "time"] }
+sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "time", "uuid"] }
 thiserror = "1.0.56"
 time = "0.3.34"
 tokio = { version = "1.36.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+uuid = { version = "1.7.0", features = ["serde"] }
 webp = "0.2.6"
