--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,6 +17,11 @@ jobs:
       - uses: actions/checkout@v2
       - run: echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" | sed 's|/|-|g' >> $GITHUB_ENV
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: 'arm64'
+
       - name: Set up docker buildx
         uses: docker/setup-buildx-action@v3
 
@@ -57,6 +62,9 @@ jobs:
         with:
           # https://github.com/docker/build-push-action/issues/378
           context: .
+          platforms: |-
+            linux/amd64
+            linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
