--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,6 +8,9 @@ jobs:
     permissions:
       packages: write
     if: github.repository == 'PluralKit/avatars'
+    strategy:
+      matrix:
+        platform: [linux/amd64, linux/arm64]
     steps:
       - uses: docker/login-action@v1
         with:
@@ -40,8 +43,8 @@ jobs:
       - name: Build Cache for Docker (target)
         uses: actions/cache@v3
         with:
-          path: rust-build-cache-target
-          key: ${{ runner.os }}-rust-build-cache-target-${{ hashFiles('**/Cargo.lock') }}
+          path: rust-build-cache-target-${{ matrix.platform }}
+          key: ${{ runner.os }}-rust-build-cache-target-${{ hashFiles('**/Cargo.lock') }}-${{ matrix.platform }}
       - name: Build Cache for Docker (registry)
         uses: actions/cache@v3
         with:
@@ -50,7 +53,7 @@ jobs:
       - name: inject rust-build-cache into docker
         uses: reproducible-containers/buildkit-cache-dance@v2.1.2
         with:
-          cache-source: rust-build-cache-target
+          cache-source: rust-build-cache-target-${{ matrix.platform }}
           cache-target: /app/target/
       - name: inject rust-build-cache into docker
         uses: reproducible-containers/buildkit-cache-dance@v2.1.2
@@ -63,8 +66,7 @@ jobs:
           # https://github.com/docker/build-push-action/issues/378
           context: .
           platforms: |-
-            linux/amd64
-            linux/arm64
+            ${{ matrix.platform }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
