--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,7 +10,7 @@ jobs:
     if: github.repository == 'PluralKit/avatars'
     strategy:
       matrix:
-        platform: [linux/amd64, linux/arm64]
+        platform: [amd64, arm64]
     steps:
       - uses: docker/login-action@v1
         with:
@@ -66,7 +66,7 @@ jobs:
           # https://github.com/docker/build-push-action/issues/378
           context: .
           platforms: |-
-            ${{ matrix.platform }}
+            linux/${{ matrix.platform }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
