--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: macos-14
+    runs-on: ubuntu-latest
     permissions:
       packages: write
     if: github.repository == 'PluralKit/avatars'
